--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
     "typescript": "^5.7.2"
   },
   "dependencies": {
-    "@balancer/sdk": "^0.33.5"
+    "@balancer/sdk": "^0.33.5",
+    "@types/node": "^22.10.2",
+    "dotenv": "^16.4.7",
+    "ethers": "^5.7.2"
   }
 }
